# fa4-cp

./: .gitignore  README.md  pyproject.toml
bench/: bench_merge.py
fa4_ring/: __init__.py  config.py  fa4_backend.py  merge.py  reference.py  ring_attention.py  zigzag.py
fa4_ring/gdn_cp/: __init__.py  allgather_cp.py  metadata.py  reference.py  state_passing.py
tests/: test_algorithm_cpu.py  test_gdn_cp_cpu.py  test_gdn_cp_dist.py  test_ring_correctness.py  test_zigzag.py
